--- a/app/static/css/templates/_quizzes.scss
+++ b/app/static/css/templates/_quizzes.scss
@@ -50,6 +50,8 @@ body {
     }
 
     &__questions {
+        margin-bottom: 3rem;
+
         &::after {
             content: "";
             position: fixed;
